--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,6 +3,7 @@ html,body,#app {
   margin: 0;
   height: 100%;
   min-width: 1366px;
+  overflow: hidden;
 }
 
 .el-breadcrumb {
@@ -11,4 +12,8 @@ html,body,#app {
 
 .el-card {
   box-shadow: 0 1px 1px rgba(0, 0, 0, .15) !important;
+}
+
+.ql-editor {
+  min-height: 300px;
 }
